--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:dist="http://schemas.android.com/apk/distribution"
     package="com.example.intelli_supermart_app">
+
+    <dist:module dist:instant="true" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
@@ -26,6 +29,7 @@
 
 
         <activity android:name=".GoogleMapsActivity"
+            android:parentActivityName=".AddAddressActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".VerificationActivity"
