--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ProductActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".OrderConfirmedActivity"></activity>
+        <activity
+            android:name=".PlaceOrderActivity"
+            android:parentActivityName=".CartActivity" />
+        <activity
+            android:name=".AddressAndTimeActivity"
+            android:parentActivityName=".CartActivity" />
+        <activity
+            android:name=".ProductActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Category3" />
         <activity android:name=".Category2" />
         <activity android:name=".Category1" />
@@ -26,8 +34,10 @@
             android:name=".CategoryActivity"
             android:label="@string/title_activity_category"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".CartActivity"
-            android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".CartActivity"
+            android:parentActivityName=".MainActivity" />
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
