--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.android.gms:play-services-places:17.0.0'
     implementation 'com.google.android.libraries.places:places:2.1.0'
+    implementation 'com.firebaseui:firebase-ui-auth:3.1.0'
+    implementation 'com.google.firebase:firebase-auth:11.4.2'
 }
+apply plugin: 'com.google.gms.google-services'
