--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.SEND_SMS" />
 
     <application
         android:allowBackup="true"
@@ -18,8 +18,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".cart.activities.CartViewActivity"
-            android:parentActivityName=".AddressAndTimeActivity"/>
+        <activity
+            android:name=".cart.activities.CartViewActivity"
+            android:parentActivityName=".AddressAndTimeActivity" />
         <activity android:name=".OrderConfirmedActivity" />
         <activity
             android:name=".PlaceOrderActivity"
